<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.fragments.EditProfileFragment">

        <TextView
            android:id="@+id/lbUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:letterSpacing=".05"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Create Profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="name"
            android:hint="@string/john_doe"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="postalAddress"
            android:hint="@string/no_26_67th_street_neverland"
            android:inputType="textPostalAddress"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mobile_no" />

        <EditText
            android:id="@+id/editMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="phone"
            android:hint="@string/_12_123_45_6789"
            android:inputType="phone"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/next_of_kin_guardian_name" />

        <EditText
            android:id="@+id/editGuardian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/marcus_doe"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/their_mobile_no" />

        <EditText
            android:id="@+id/editGuardianMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="phone"
            android:hint="@string/_12_987_65_4321"
            android:inputType="phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lbError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_red_light"
            tools:text="Please fill all the fields properly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:letterSpacing="0.1"
            android:text="@string/done" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
