<?xml version="1.0" encoding="utf-8"?>


<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_a1"
    tools:showIn="@layout/fragment_phq">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_1_naa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_at_all" />

        <RadioButton
            android:id="@+id/radio_1_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/several_days" />

        <RadioButton
            android:id="@+id/radio_1_mthtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_than_half_the_days" />

        <RadioButton
            android:id="@+id/radio_1_ned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearly_every_day" />
    </RadioGroup>
</TableRow>