<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lbQuestionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/_1" />

    <TextView
        android:id="@+id/lbQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/raleway_medium"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/lbQuestionNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/_1_i_have_been_able_to_laugh_and_see_the_funny_side_of_things" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lbQuestion"
        app:layout_constraintTop_toBottomOf="@+id/lbQuestion">

        <RadioButton
            android:id="@+id/radioAnswer1"
            android:layout_width="wrap_content"
            android:letterSpacing="0.05"
            android:layout_height="wrap_content"
            tools:text="@string/as_much_as_i_always_could" />

        <RadioButton
            android:id="@+id/radioAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            tools:text="@string/not_quite_so_much_now" />

        <RadioButton
            android:id="@+id/radioAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            tools:text="@string/definitely_not_so_much_now" />

        <RadioButton
            android:id="@+id/radioAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            tools:text="@string/not_at_all" />
    </RadioGroup>

    <TextView
        android:id="@+id/lbError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:text="@string/please_select_a_choice" />

</androidx.constraintlayout.widget.ConstraintLayout>