<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NormalFragment">

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/raleway_medium"
        android:letterSpacing="0.1"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/sad_face"
        android:src="@drawable/ic_smiley_face"
        app:layout_constraintBottom_toTopOf="@+id/txt_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_heading" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/hurray_you_do_not_have_any_level_of_depression_keep_up_the_good_work_n_nexercise_and_meditate_daily_to_have_for_a_healthy_brain_which_leads_to_a_healthy_mind"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnOkay"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/okay"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.1"
        app:layout_constraintEnd_toEndOf="@+id/txt_desc"
        app:layout_constraintStart_toStartOf="@+id/txt_desc"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>